Create attendance page (#36)
* Change GET  /statuses to return status labels

* Move and add endpoints according to previous commit

* Add brother status per semester struct

* Add swagger docs and change response format

* Add major to query statement and change response format

* Change /semester endpoint to return list of labels

* Add GET endpoint for /semester/statuses

* Add Attendance page and sheet/form

* Add title and description to edit sheet
