# api/handlers/brother_handler.go
@@ -561,6 +561,67 @@ func (h *Handler) GetBrothersMajorsCount(w http.ResponseWriter, r *http.Request)
     models.RespondWithSuccess(w, http.StatusOK, majorCounts)
 }
 
+//	@Tags			Brothers
+//	@Summary		Get all status records per brother
+//	@description	Get all status records per brother
+//	@Param			semester query		string																	false	"Semester filter"	
+//	@Success		200		{object}	models.APIResponse{data=models.BrotherStatus}   
+//	@failure		400		{string}	models.APIResponse														"error"
+//	@Router			/api/brothers/statuses [get]
+func (h *Handler) GetAllBrotherStatuses(w http.ResponseWriter, r *http.Request) {
+    ctx, cancel := context.WithTimeout(context.Background(), dbTimeout)
+    defer cancel()
+    semester := r.URL.Query().Get("semester")
+
+    // Query for all brother statuses
+    query := `
+    SELECT b.brotherID, b.rollCall, b.firstName, b.lastName, b.major, bs.status, s.semesterLabel
+    FROM brotherStatus bs
+    JOIN brothers b ON b.brotherID = bs.brotherID
+    JOIN semester s ON s.semesterID = bs.semesterID
+    `
+    var rows *sql.Rows
+    var err error
+    if semester == "" {
+        // Query without filter
+        rows, err = h.db.QueryContext(ctx, query)
+    } else {
+        // query filtering by semester
+        query += " WHERE semesterLabel = $1"
+        rows, err = h.db.QueryContext(
+            ctx,
+            query,
+            semester,
+        )
+    } 
+
+    // Error handling query
+    fmt.Printf("Querying for all semester statuses:\n%s\n", query)
+    if err != nil {
+        errMsg := fmt.Sprintf("Error while querying for all brother statuses: %s", err.Error())
+        log.Println(errMsg)
+        models.RespondWithError(w, http.StatusInternalServerError, errMsg)
+        return
+    }
+
+    log.Println("Parsing brother objects\n")
+    // Parse query rows
+    var brotherStatuses []*models.BrotherStatus
+    for rows.Next(){
+        brotherStatus, err := models.CreateBrotherStatusFromRow(rows)
+        if err != nil {
+            errMsg := fmt.Sprintf("Error while parsing brotherStatus query: '%s'", err.Error())
+            log.Println(errMsg)
+            models.RespondWithError(w, http.StatusInternalServerError, errMsg)
+            return
+        }
+        brotherStatuses = append(brotherStatuses, &brotherStatus)
+    }
+
+    // Build response
+    models.RespondWithSuccess(w, http.StatusOK, brotherStatuses)
+}
+
 
 //	@Tags			Brothers
 //	@Summary		Get status counts
