# api/server.go
@@ -99,10 +99,12 @@ func setupRoutes(handler *handlers.Handler) *chi.Mux {
     // brothers count
 	r.Get("/api/brothers/count", handler.GetBrothersCount)
 	r.Get("/api/brothers/majors/count", handler.GetBrothersMajorsCount)
+    r.Get("/api/brothers/statuses", handler.GetAllBrotherStatuses)
 	r.Get("/api/brothers/statuses/count", handler.GetBrotherStatusCount)
 
     // brotherStatus endpoints
-    r.Get("/api/statuses", handler.GetAllBrotherStatuses)
+    // r.Get("/api/statuses", handler.GetAllBrotherStatuses)
+    r.Get("/api/statuses", handler.GetAllStatusLabels)
     r.Get("/api/brothers/{id}/statuses", handler.GetBrotherStatusHistory)
     r.Post("/api/brothers/{id}/statuses", handler.CreateBrotherStatus)
 
@@ -123,6 +125,7 @@ func setupRoutes(handler *handlers.Handler) *chi.Mux {
     // semester endpoints
     r.Get("/api/semesters", handler.GetAllSemesterLabels)
     r.Post("/api/semesters", handler.CreateSemesterLabel)
+    r.Get("/api/semesters/{semester}/statuses", handler.GetAllBrotherStatusesForSemester)
 
 	return r
 }
